src/App.css
/* ... */
button.rest-button:hover {
  background-color: rgb(252, 177, 226);
  color: black;
}

button.rest-button span {
  position: absolute;
  width: 25%;
  height: 100%;
  background-color: rgb(252, 177, 226);
  transform: translateY(150%);
  border-radius: 50%;
  left: calc((var(--n) - 1) * 25%);
  transition: 0.5s;
  transition-delay: calc((var(--n) - 1) * 0.1s);
  z-index: -1;
}

button.rest-button:hover span {transform: translateY(0) scale(2);}
button.rest-button span:nth-child(1) {--n: 1;}
button.rest-button span:nth-child(2) {--n: 2;}
button.rest-button span:nth-child(3) {--n: 3;}
button.rest-button span:nth-child(4) {--n: 4;}

/* Resturant Remove button */
button.rest-button1 {
  --button-color: rgba(255, 255, 255, 1);
  color: rgb(0, 0, 0);
  font-size: 16px;
  border: 0.3em solid var(--button-color);
  border-radius: 0.5em;
  width: 8em;
  height: 3em;
  text-transform: uppercase;
  font-weight: bold;
  font-family: sans-serif;
  letter-spacing: 0.1em;
  text-align: center;
  line-height: 1em;
  position: relative;
  overflow: hidden;
  z-index: 1;
  transition: 0.5s;
  margin: 1em 0;
  background-color: var(--button-color);
}

button.rest-button1:hover {
  background-color: rgb(252, 177, 226);
  color: black;
}

button.rest-button1 span {
  position: absolute;
  width: 25%;
  height: 100%;
  background-color: rgb(252, 177, 226);
  transform: translateY(150%);
  border-radius: 50%;
  left: calc((var(--n) - 1) * 25%);
  transition: 0.5s;
  transition-delay: calc((var(--n) - 1) * 0.1s);
  z-index: -1;
}

/* Resturant  CSS (for testing purposes) */
.rest-container {
  border: 2px solid rgb(255, 221, 199);
  margin: 1rem 0;
  padding: 2rem;
  border-radius: 5px;
  max-width: min(700px);
  margin-inline: auto;
  display: grid;
  grid-template-columns: 1fr 150px;
}

.rest-container p{
  font-size: 1.0rem;
  text-transform: uppercase;
  font-weight: bold;
  font-family: sans-serif;
  letter-spacing: 0.1em;
}
.rest-container h2 {
  margin: 0;
  font-size: 1.5rem;
}

/* Search Page */
.search-bar {
  padding: 10px;
  border-radius: 5px;
  border: 1px solid #ffffff; 
  font-size: 16px;
  width: 285px;
  box-sizing: border-box;
  outline: none;
}

/* Search Group Name Search Bar */
.search-box1 {
  width: 285px;
  padding: 10px;
  border: 1px solid #ffffff;
  border-radius: 5px;
  font-size: 16px;
  box-sizing: border-box;
  outline: none;
}

.search-box1:focus {
  border-color: white;
  box-shadow: 0 0 0 2px black inset;
}

/* form */
.form-row {
  display: flex;
  justify-content: space-between;
  margin-top: 20px;
}

.form-item { margin-right: 10px;}

/* form 2*/
.form-row2 {
  display: flex;
  justify-content: left;
  margin-top: 20px;
}

.form-item2 { margin-right: 71px;}

/* Submit button */
button.grps-button {
  --button-color: rgba(255, 255, 255, 1);
  color: rgb(0, 0, 0);
  font-size: 16px;
  border: 0.3em solid var(--button-color);
  border-radius: 0.5em;
  width: 7em;
  height: 3em;
  text-transform: uppercase;
  font-weight: bold;
  font-family: sans-serif;
  letter-spacing: 0.1em;
  text-align: center;
  line-height: 1em;
  position: relative;
  overflow: hidden;
  z-index: 1;
  transition: 0.5s;
  margin: 1em 0;
  background-color: var(--button-color);
}

button.grps-button:hover {
  background-color: rgb(177, 229, 252);
  color: black;
}

button.grps-button span {
  position: absolute;
  width: 25%;
  height: 100%;
  background-color: rgb(177, 229, 252);
  transform: translateY(150%);
  border-radius: 50%;
  left: calc((var(--n) - 1) * 25%);
  transition: 0.5s;
  transition-delay: calc((var(--n) - 1) * 0.1s);
  z-index: -1;
}

button.grps-button:hover span { transform: translateY(0) scale(2);}
button.grps-button span:nth-child(1) { --n: 1;}
button.grps-button span:nth-child(2) { --n: 2;}
button.grps-button span:nth-child(3) { --n: 3;}
button.grps-button span:nth-child(4) { --n: 4;}

/*Cancel button*/
button.grps-button2 {
  --button-color: rgba(255, 255, 255, 1);
  color: rgb(0, 0, 0);
  font-size: 16px;
  border: 0.3em solid var(--button-color);
  border-radius: 0.5em;
  width: 7em;
  height: 3em;
  text-transform: uppercase;
  font-weight: bold;
  font-family: sans-serif;
  letter-spacing: 0.1em;
  text-align: center;
  line-height: 1em;
  position: relative;
  overflow: hidden;
  z-index: 1;
  transition: 0.5s;
  margin: 1em 0;
  background-color: var(--button-color);
}

button.grps-button2:hover {
  background-color:  rgb(252, 221, 177);
  color: black;
}

button.grps-button2 span {
  position: absolute;
  width: 25%;
  height: 100%;
  background-color:  rgb(252, 221, 177);
  transform: translateY(150%);
  border-radius: 50%;
  left: calc((var(--n) - 1) * 25%);
  transition: 0.5s;
  transition-delay: calc((var(--n) - 1) * 0.1s);
  z-index: -1;
}

button.grps-button2:hover span { transform: translateY(0) scale(2);}
button.grps-button2 span:nth-child(1) {--n: 1;}
button.grps-button2 span:nth-child(2) {--n: 2;}
button.grps-button2 span:nth-child(3) {--n: 3;}
button.grps-button2 span:nth-child(4) {--n: 4;}
.button-spacing { margin-right: 10px;}

/*Cancel button2*/
button.grps-button3 {
  --button-color:   rgb(252, 221, 177);
  color: rgb(0, 0, 0);
  font-size: 16px;
  border: 0.3em solid rgb(252, 221, 177);
  border-radius: 0.5em;
  width: 7em;
  height: 3em;
  text-transform: uppercase;
  font-weight: bold;
  font-family: sans-serif;
  letter-spacing: 0.1em;
  text-align: center;
  line-height: 1em;
  position: relative;
  overflow: hidden;
  z-index: 1;
  transition: 0.5s;
  margin: 1em 0;
  background-color:   rgb(252, 221, 177);
}

button.grps-button3:hover {
  background-color:  rgb(255, 255, 255);
  color: black;
}

button.grps-button3 span {
  position: absolute;
  width: 25%;
  height: 100%;
  background-color:  rgb(255, 255, 255);
  transform: translateY(150%);
  border-radius: 50%;
  left: calc((var(--n) - 1) * 25%);
  transition: 0.5s;
  transition-delay: calc((var(--n) - 1) * 0.1s);
  z-index: -1;
}
/* ... */

